<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/mainScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fillViewport="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/editTitleTextView"
                    android:layout_weight="100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="20sp"
                    android:text="@string/editHospitalDepartment"
                    android:textColor="@color/white"
                    android:padding="@dimen/padding" />

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding">

            <EditText
                    android:id="@+id/editIdentifierTextView"
                    android:textSize="14sp"
                    android:hint="@string/identifier"
                    android:inputType="number"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent" />

            <EditText
                    android:id="@+id/editNameTextView"
                    android:textSize="14sp"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin" />

            <EditText
                    android:id="@+id/editAliasTextView"
                    android:textSize="14sp"
                    android:hint="@string/alias"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin" />

            <EditText
                    android:id="@+id/editAddressTextView"
                    android:textSize="14sp"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin" />

            <EditText
                    android:id="@+id/editContactTextView"
                    android:textSize="14sp"
                    android:hint="@string/contact"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin" />

            <EditText
                    android:id="@+id/editTelecomTextView"
                    android:textSize="14sp"
                    android:hint="@string/telecom"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin" />

            <EditText
                    android:id="@+id/editEndpointTextView"
                    android:textSize="14sp"
                    android:hint="@string/endpoint"
                    android:inputType="text"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/margin" />

            <RelativeLayout
                    android:id="@+id/statusRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:paddingTop="@dimen/paddingHalf"
                    android:paddingBottom="@dimen/paddingHalf">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                        <Spinner
                                android:id="@+id/editTypeSpinner"
                                android:layout_height="wrap_content"
                                android:layout_width="match_parent" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                        <Switch
                                android:id="@+id/editActiveSwitch"
                                android:text="@string/active"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/padding"
                                tools:ignore="UseSwitchCompatOrMaterialXml" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                    android:id="@+id/buttonRow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding"
                    android:paddingTop="@dimen/paddingHalf"
                    android:paddingBottom="@dimen/paddingHalf">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:baselineAligned="false">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:paddingRight="@dimen/paddingHalf">

                        <Button
                                android:backgroundTint="@color/gray2"
                                android:layout_height="48dp"
                                android:layout_width="match_parent"
                                android:text="@string/cancel"
                                android:onClick="closeEditModal"
                                android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal"
                            android:paddingLeft="@dimen/paddingHalf">

                        <Button
                                android:backgroundTint="@color/blue"
                                android:layout_height="48dp"
                                android:layout_width="match_parent"
                                android:text="@string/save"
                                android:onClick="updateOrganization"
                                android:textColor="@color/white" />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>