<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity"
        android:padding="@dimen/padding">

    <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.049" />

    <TextView
            android:id="@+id/loginTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createAccount"
            android:textColor="@color/teal_700"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-black"
            android:textSize="20sp"
            android:textAllCaps="true"
            tools:layout_editor_absoluteX="@dimen/padding"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            android:layout_marginTop="@dimen/padding"/>

    <EditText
            android:id="@+id/nameEditText"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="5dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginTop="@dimen/marginDouble"
            app:layout_constraintTop_toBottomOf="@+id/loginTextView" />


    <EditText
            android:id="@+id/emailEditText"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="16dp"
            android:layout_marginTop="@dimen/marginDouble"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"
            app:layout_constraintVertical_bias="0.0" />

    <RelativeLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            tools:layout_editor_absoluteX="16dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">

            <EditText
                    android:id="@+id/passwordEditText"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/paddingHalf"
                    android:layout_weight="1" />

            <EditText
                    android:id="@+id/passwordConfirmationEditText"
                    android:inputType="textPassword"
                    android:hint="@string/passwordConfirmation"
                    android:layout_width="0dp"
                    android:layout_marginLeft="@dimen/paddingHalf"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/buttonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
            tools:layout_editor_absoluteX="16dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <Button
                    android:id="@+id/registerBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/createAccount"
                    app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
                    tools:layout_editor_absoluteX="@dimen/padding"
                    android:layout_marginTop="32dp"
                    android:backgroundTint="@color/blue"
                    android:height="@dimen/buttonHeight"
                    android:onClick="register"
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:focusable="true"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/loaderRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="16dp"
            android:background="@color/white"
            android:alpha="0.8"
            android:visibility="gone">

        <ProgressBar
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_centerInParent="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>